Fixed: x-overflow for chrome
Due to width of 100vw on body there was overflow in horizontal direction i.e scroll bar was appearing, removed the width from body and now it is fixed

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 body {
     position: absolute;
     height: 100vh;
-    width: 100vw;
     font-family: "Poppins", sans-serif;
 }
 
